tests/reference/asr-def_func_04-4af8c0d.stderr
semantic error: Number of arguments does not match in the function call
 --> tests/errors/def_func_04.py:5:1
  |
5 | func_04(y=3)
  | ^^^^^^^^^^^^ missing 1 required arguments :'x'
